- Adjusted 'url' field in extensions' credits
- ParserPhase2: Fixed client side caching logic due to a bug in PHP's preg_match_all function
- ExtensionClass: added 'AutoMethods' for initializing a derived class's hooks, parser functions & magic words automatically
- ExtensionClass: added support for adding 'head' and 'body' scripts links whilst preserving parser caching coherency.
- Added 'CacheTools' extension
- Added more documentation in BizzWikiSettings.php
- Added BizzWiki logo design files
==========
REL1_10_6:
- Integrated 'ParserFunctions' extension
- Integrated 'StringFunctions' extension
- Added 'PageFunctions' extension
- ParserPhase2: can now call any standard 'parser' functions & variables (i.e. through magic words)
- Added 'ForeachFunctions' extension
- Adjusted 'Log/rights' browse right for '*' group
- Adjusted 'Log/move' browse right for '*' group
- Adjusted 'Log/block' browse right for '*' group
- FileManager: disabled client side caching upon accessing NS_FILESYSTEM
- Added 'importupload' to managed rights
==========
REL1_10_7:
- SecureProperties: added global variable 'get' and 'set' operations
- ParserPhase2: fixed an issue with $wgParser not setting mTitle property when needed
- Added 'NS_INTERWIKI' accessible to '*'
- Fixed page history for revision level policing
- ForeachFunction: added security through only allowing 'protected' pages
- ForeachFunction: added 'array of arrays' iteration capability
- Added 'PermissionFunctions' extension
- Added 'NamespaceFunctions' extension
- Added 'StubManager' extension
- Fixed small bug (non core, just when Special:Version is viewed in a particular case) in RawRight
- Added 'EmailLog' extension
- Added 'UserSettingsChanged' hook in User.php (used for logging functionality)
- Adjusted 'Log/emaillog' browse right for '*' group
- Added 'ReCaptcha' plug-in -- requires customization to the target site where BizzWiki is deployed.
- 